fix: Display on mobile

--- a/src/ducks/categories/styles.styl
+++ b/src/ducks/categories/styles.styl
@@ -99,10 +99,10 @@
 
     +small-screen()
         .bnk-table-category-category
-            maxed-flex-basis 60%
+            maxed-flex-basis 53%
 
         .bnk-table-percentage
-            maxed-flex-basis 10%
+            maxed-flex-basis 17%
 
         .bnk-table-total
             maxed-flex-basis 30%
